--- a/config/packages/knp_snappy.yaml
+++ b/config/packages/knp_snappy.yaml
@@ -1,5 +1,5 @@
 knp_snappy:
-    temporary_folder: '%env(resolve:TEMP_DIR)%'
+    temporary_folder: "%kernel.cache_dir%/snappy"
     process_timeout: 20 # In seconds
     pdf:
         enabled:    true
